fix bug on firefox with tableÉ

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,6 +25,7 @@ body {
 
 table {
   border: 1px solid #4444;
+  width: 100%;
 
   th,
   td {
